--- a/styles2.css
+++ b/styles2.css
@@ -83,3 +83,15 @@ p{
   display: table;
   clear: both;
 }
+hr { 
+  height: 2px;
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  border-width: 1px;
+  background-color: red; 
+   
+}
