--- a/styles.css
+++ b/styles.css
@@ -12,14 +12,17 @@ html{
 body {
     /* height: 100%; */
     margin: 0%;
-    background-image: url("blk.jpg");
+    background-image: url("desk.jpg");
     image-rendering: auto;
     image-rendering: crisp-edges;
      image-rendering: pixelated;
 
     /* font-family: 'Roboto';  */
-    font-style: italic; 
+    /* font-style: italic;  */
     /* transition: background-color 1s ease;  if u want color transition*/
+    
+    font-family: 'Indie Flower', cursive;
+    
     
   }
 
@@ -31,7 +34,7 @@ body {
     width: 100%; 
     background-size: cover;
     /* The image used */
-    background-image: url("giphy2.gif");
+     background-image: url("moon2.gif");
     image-rendering: auto;
     image-rendering: crisp-edges;
      image-rendering: pixelated;
@@ -41,8 +44,17 @@ body {
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat; 
+    background-repeat: no-repeat;   
    
+  }
+
+  #myVideo {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    align-content: center;  
+    /* width: 100%;  
+     height: 100%; */
   }
 
 
@@ -63,7 +75,7 @@ body {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 22px;
   
   
 }
@@ -98,8 +110,8 @@ p{
   line-height: 1.74;
   word-wrap: break-word;
   padding: 5%; 
-  color: #f1f1f1;
-  font-size: 20px; 
+  color: black;
+  font-size: 22px; 
 }
 
 img{
@@ -119,13 +131,14 @@ img{
   
   h1 {
     text-align: center;
-    color: #f1f1f1;
+    color: black;
+    font-size: 44px; 
     font-weight: bold;
     /* padding: 5%; */
   }
  
   h2 {
-    color: #fff; 
+    color:black; 
     font-size: 90px;
     text-align: center;
     width: 100%;
@@ -230,4 +243,13 @@ h4 {
 
 .frame{
  text-align: center; 
+}
+.footer {
+  position: static;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color:grey;
+   color: white;
+  text-align: center;
 }
