--- a/styles.css
+++ b/styles.css
@@ -242,10 +242,12 @@ h4 {
   opacity: 0.3;
   
 }
-
+/* 
 .frame{
- text-align: center; 
-}
+ text-align: center;
+ border: none; 
+  
+} */
 
 .footer {
   position: static;
