--- a/styles.css
+++ b/styles.css
@@ -242,12 +242,12 @@ h4 {
   opacity: 0.3;
   
 }
-/* 
+
 .frame{
  text-align: center;
  border: none; 
   
-} */
+}
 
 .footer {
   position: static;
