--- a/styles.css
+++ b/styles.css
@@ -244,9 +244,18 @@ h4 {
 }
 
 .frame{
+ overflow: hidden;
  text-align: center;
  border: none; 
   
+}
+.frame iframe{
+  border: 0;
+   height: 100%;
+   left: 0;
+   position: absolute;
+   top: 0;
+   width: 100%;
 }
 
 .footer {
