--- a/styles.css
+++ b/styles.css
@@ -126,8 +126,8 @@ img{
   .content {
     display: block;
     /* display: table; */
-    height: 100%;
-    width: 100%;
+    /* height: 100%;
+    width: 100%; */
     margin-top: 70px; 
   }
   
