--- a/styles.css
+++ b/styles.css
@@ -124,10 +124,10 @@ img{
   
   /* panel styles */
   .content {
-    display: block;
+    /* display: block; */
     /* display: table; */
-    /* height: 100%;
-    width: 100%; */
+    height: 100%;
+    width: 100%;
     margin-top: 70px; 
   }
   
@@ -246,6 +246,7 @@ h4 {
 
 .frame{
  overflow: hidden;
+ display: block;
  text-align: center;
  border: none; 
   
