--- a/styles.css
+++ b/styles.css
@@ -124,10 +124,11 @@ img{
   
   /* panel styles */
   .content {
-    display: table;
+    /* display: table;
     height: 100%;
-    width: 100%;
+    width: 100%; */
     margin-top: 70px; 
+    
   }
   
   h1 {
@@ -244,7 +245,8 @@ h4 {
 }
 
 .frame{
-overflow: hidden; 
+  position: relative;
+ overflow: hidden; 
  text-align: center;
  border: none; 
   
