--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
   }
 
   #myVideo {
-    position: absolute;
+    /* position: absolute; */
     right: 0;
     bottom: 0;
     align-content: center;  
@@ -103,6 +103,7 @@ body {
   margin-right: -15px;
   margin-left: -15px;
   width: 100%;
+  
 }
 
 p{
@@ -124,10 +125,12 @@ img{
   
   /* panel styles */
   .content {
-    /* display: table;
+    /* display: table; */
+    
     height: 100%;
-    width: 100%; */
+    width: 100%; 
     margin-top: 70px; 
+    /* position: relative; */
     
   }
   
@@ -183,7 +186,7 @@ h4 {
   /* background-color: rgb(76, 152, 175);   */
   height: .5%;
   padding: 0%; 
-  position:relative;
+  /* position:relative; */
   margin-top: 0;
 }
 .fa {
@@ -224,7 +227,7 @@ h4 {
 
 
 .container {
-  position: relative;
+  /* position: relative; */
   width: 50%;
   
 }
@@ -245,7 +248,7 @@ h4 {
 }
 
 .frame{
-  position: relative;
+  /* position: relative; */
  overflow: hidden; 
  text-align: center;
  border: none; 
@@ -253,7 +256,7 @@ h4 {
 }
 
 .footer {
-  position: static;
+  /* position: relative; */
   left: 0;
   bottom: -5;
   width: 100%;
