--- a/styles.css
+++ b/styles.css
@@ -269,29 +269,23 @@ p2{
 
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 500px) {
   .frame {
-    width: 600px; 
+    align-content: center; 
+    /* width: 420px;  */
     height: 875px; 
   }
- 
-  .parallax{
-    /* align-self: center;  */
-    /* width: 600px;  */
-    
-    
-    /* Make video to at least 100% wide and tall */
-  min-width: 100%; 
-  min-height: 100%; 
-
-  /* Setting width & height to auto prevents the browser from stretching or squishing the video */
-  width: auto;
-  height: auto;
-
-  /* Center the video */
-  /* position: absolute; */
-  /* top: 50%;
-  left: 50%; */
-  /* transform: translate(-50%,-50%); */
+  .content{
+    width: 600px; 
   }
+  .parallax{
+    width: 637px; 
+  }
+ .myIframe{
+   width: 100%;
+  
+   
+ }
+ 
+  
 }
